# Math_Foundations

./: .gitignore  .markdownlint-cli2.jsonc  CNAME  CONTRIBUTING.md  Manifest.toml  Project.toml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/copilot/: instructions.md
.github/instructions/: docs.instructions.md  linear.instructions.md  notebooks.instructions.md  project.instructions.md  source.instructions.md  testing.instructions.md
.github/workflows/: CI.yml
copilot/: langchan.html  langchan.md
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/Geometry/Hyperbola/: index.html
docs/: Project.toml  make.jl
docs/src/: index.md  sites.md
docs/src/Algebra/: 01 Elementary Calculations.md  02 Mathematical Functions.md  03 Solving Equations.md  04 Finding Polynomial Roots and Zeros.md
docs/src/Geometry/: 01 Triangles.md  02 Hyperbola.md  02 Quadrilaterals.md  03 Polygons.md  04 Circles.md  05 Ellipses.md
docs/src/Linear Algebra/: 01 Systems of Equations.md  02 Systems of Linear Equations.md
docs/src/Trigonometry/: 01 Angles & Measurements.md  02 Trigonometric Functions.md  03 Trigonometric Identities.md
docs/src/assets/: custom.css
math_foundations/dev/: .documenter-siteinfo.json  index.html  objects.inv
math_foundations/dev/Geometry/Hyperbola/: index.html
notebooks/: Basics.ipynb  Project.toml  play.ipynb
scripts/: intro.jl
src/: Math_Foundations.jl  basic_maths.jl
test/: Project.toml  runtests.jl  test_basic_maths.jl
