[project]
name = "math-foundations"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "affine==2.4.0",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "aws-requests-auth==0.4.3",
    "babel==2.17.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.4",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "boto3==1.38.6",
    "botocore==1.38.6",
    "build==1.2.2.post1",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "chroma-py==0.1.0.dev1",
    "click==8.1.8",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "cython==3.0.12",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "findspark==2.0.1",
    "flask==3.1.0",
    "fonttools==4.57.0",
    "fqdn==1.5.1",
    "geojson==3.2.0",
    "geos==0.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.4.2",
    "json5==0.12.0",
    "jsonlines==4.0.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.1",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "kiwisolver==1.4.8",
    "lxml==5.4.0",
    "markitdown-mcp>=0.0.1a4",
    "markupsafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mpmath==1.3.0",
    "munch==4.0.0",
    "narwhals==1.37.1",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook-shim==0.2.4",
    "numpy==2.2.5",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandoc-attributes==0.1.7",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "plotly==6.0.1",
    "polyline==2.0.2",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "pyrsistent==0.20.0",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.24.0",
    "s3transfer==0.12.0",
    "scikit-learn==1.6.1",
    "sciml==0.0.11",
    "scipy==1.15.2",
    "send2trash==1.8.3",
    "setuptools==80.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tomli==2.2.1",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.13.2",
    "uri-template==1.3.0",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "zipp==3.21.0",
]
